--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,11 @@
-version: '3.8'
-
-networks:
-    default:	
+version: '3'
 services:
-    db:
-        image: mysql:5.7
-        container_name: mysqlAppDB
-        ports: 
-          -  3306:3306
-        volumes:
-          -  "./.mysqlData/db:/var/lib/mysql"
-        environment:
-          MYSQL_ROOT_PASSWORD: pass
-          MYSQL_DATABASE: mysqlAppDB
-
-    mysqlAdmin:
-        image: phpmyadmin/phpmyadmin
-        container_name: pma
-        ports:
-          -  8081:80
-        environment:
-          PMA_HOST: db
+  service:
+    image : manojishere/swipe-reload-auth:1.0
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+        - "8080:8080"
+    volumes:
+        - ./swipe-reload-logs:/logs 
